--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-          "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  
+    "start": "node server.js",
+    "test": "mocha"
   },
   "keywords": [],
   "author": "",
@@ -19,5 +18,8 @@
     "mongoose": "^5.9.16",
     "multer": "^1.4.2",
     "uuid": "^8.1.0"
+  },
+  "devDependencies": {
+    "mocha": "^11.1.0"
   }
 }
