Complete Ansible configuration for e-commerce application deployment

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -19,19 +19,5 @@
     - curl
     - gnupg
     - lsb-release
-    - git
+    - software-properties-common
     - python3-pip
-  tags:
-    - system
-    - packages
-
-- name: Install Python Docker modules
-  pip:
-    name: 
-      - docker
-      - docker-compose
-    state: present
-  become: true
-  tags:
-    - python
-    - dependencies
