--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -17,18 +17,38 @@
     - docker
     - setup
 
-- name: Install Docker
+- name: Install Docker packages
   apt:
-    name: 
-      - docker-ce
-      - docker-ce-cli
-      - containerd.io
+    name: "{{ item }}"
     state: present
-    update_cache: yes
   become: true
+  loop:
+    - docker-ce
+    - docker-ce-cli
+    - containerd.io
+    - docker-compose-plugin
   tags:
     - docker
     - setup
+
+- name: Create Docker group
+  group:
+    name: docker
+    state: present
+  become: true
+  tags:
+    - docker
+    - permissions
+
+- name: Add user to Docker group
+  user:
+    name: "{{ ansible_user_id }}"
+    groups: docker
+    append: yes
+  become: true
+  tags:
+    - docker
+    - permissions
 
 - name: Ensure Docker service is started and enabled
   service:
@@ -39,13 +59,3 @@
   tags:
     - docker
     - service
-
-- name: Add current user to docker group
-  user:
-    name: "{{ ansible_user_id }}"
-    groups: docker
-    append: yes
-  become: true
-  tags:
-    - docker
-    - permissions
