--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,3 +4,10 @@ host_key_checking = False
 deprecation_warnings = False
 retry_files_enabled = False
 roles_path = roles
+stdout_callback = yaml
+display_skipped_hosts = False
+
+[privilege_escalation]
+become = True
+become_method = sudo
+become_ask_pass = False
