--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -19,28 +19,29 @@
 
 - name: Install Docker packages
   apt:
-    name: "{{ item }}"
+    name: "{{ packages }}"
     state: present
+    update_cache: yes
   become: true
-  loop:
-    - docker-ce
-    - docker-ce-cli
-    - containerd.io
-    - docker-compose-plugin
+  vars:
+    packages:
+      - docker-ce
+      - docker-ce-cli
+      - containerd.io
   tags:
     - docker
     - setup
 
-- name: Create Docker group
-  group:
+- name: Install Docker python module
+  pip:
     name: docker
     state: present
   become: true
   tags:
     - docker
-    - permissions
+    - setup
 
-- name: Add user to Docker group
+- name: Add user to docker group
   user:
     name: "{{ ansible_user_id }}"
     groups: docker
@@ -50,12 +51,10 @@
     - docker
     - permissions
 
-- name: Ensure Docker service is started and enabled
-  service:
-    name: docker
-    state: started
-    enabled: yes
-  become: true
+- name: Create Docker network
+  docker_network:
+    name: "{{ docker_network_name }}"
+    state: present
   tags:
     - docker
-    - service
+    - network
